--- a/molecule/kind/destroy.yml
+++ b/molecule/kind/destroy.yml
@@ -4,6 +4,6 @@
   connection: local
   gather_facts: false
 
-  tasks:
-    - name: Destroy test kind cluster
-      command: kind delete cluster --name perftest --kubeconfig {{ kubeconfig }}
+  # tasks:
+  #   - name: Destroy test kind cluster
+  #     command: kind delete cluster --name perftest --kubeconfig {{ kubeconfig }}
