--- a/tasks/prometheus-operator.yml
+++ b/tasks/prometheus-operator.yml
@@ -13,7 +13,11 @@
       apiVersion: v1
       kind: ServiceAccount
       metadata:
-        name: prometheus
+        labels:
+          app.kubernetes.io/component: controller
+          app.kubernetes.io/name: prometheus-operator
+          app.kubernetes.io/version: v0.41.1
+        name: prometheus-operator
         namespace: default
 
 - name: Manually create the prometheus-operator cluster role
@@ -59,7 +63,7 @@
         name: prometheus
       subjects:
       - kind: ServiceAccount
-        name: prometheus
+        name: prometheus-operator
         namespace: default
 
 
