--- a/tasks/prometheus-operator.yml
+++ b/tasks/prometheus-operator.yml
@@ -73,7 +73,7 @@
         name: prometheus
       subjects:
       - kind: ServiceAccount
-        name: prometheus-operator
+        name: prometheus
         namespace: default
 
 
