--- a/tasks/metrics.yml
+++ b/tasks/metrics.yml
@@ -15,3 +15,64 @@
 #   file:
 #     path: /tmp/prometheus-operator.yaml
 #     state: absent
+
+- name: Download metrics server cluster role
+  get_url:
+    url: https://github.com/kubernetes/kube-state-metrics/raw/master/examples/standard/cluster-role.yaml
+    dest: /tmp/metrics-server-cluster-role.yaml
+    mode: 0644
+
+- name: Download metrics server cluster role binding
+  get_url:
+    url: https://github.com/kubernetes/kube-state-metrics/raw/master/examples/standard/cluster-role-binding.yaml
+    dest: /tmp/metrics-server-cluster-role-binding.yaml
+    mode: 0644
+
+- name: Download metrics server deployment 
+  get_url:
+    url: https://raw.githubusercontent.com/kubernetes/kube-state-metrics/master/examples/standard/deployment.yaml
+    dest: /tmp/metrics-server-deployment.yaml
+    mode: 0644
+
+- name: Download metrics server service account
+  get_url:
+    url: https://raw.githubusercontent.com/kubernetes/kube-state-metrics/master/examples/standard/service-account.yaml
+    dest: /tmp/metrics-server-service-acount.yaml
+    mode: 0644
+
+- name: Download metrics server service
+  get_url:
+    url: https://raw.githubusercontent.com/kubernetes/kube-state-metrics/master/examples/standard/service.yaml
+    dest: /tmp/metrics-server-service.yaml
+    mode: 0644
+
+
+- name: Deploy metrics server cluster role
+  k8s:
+    state: present
+    src: /tmp/metrics-server-cluster-role.yaml
+    wait: true
+
+- name: Deploy metrics server cluster role binding
+  k8s:
+    state: present
+    src: /tmp/metrics-server-cluster-role-binding.yaml
+    wait: true
+
+- name: Deploy metrics server service account
+  k8s:
+    state: present
+    src: /tmp/metrics-server-service-acount.yaml
+    wait: true
+
+- name: Deploy metrics server deployment
+  k8s:
+    state: present
+    src: /tmp/metrics-server-deployment.yaml
+    wait: true
+
+- name: Deploy metrics server service
+  k8s:
+    state: present
+    src: /tmp/metrics-server-service.yaml
+    wait: true
